cross refs and JEL classification

--- a/climate_sereno.qmd
+++ b/climate_sereno.qmd
@@ -131,7 +131,7 @@ The price transmission mechanism occurs along similar lines: upstream price chan
 
 Overall, relative price adjustments that pass through to broad-based inflation ("first-round effects") can generate durable implications for medium-run inflation, expectations, wages ("second-round effects"), and the conduct of monetary policy [@reis2010; BIS 2022]. At the same time, as noted by NGFS (2021), more frequent climate shocks will make it more difficult to disentangle permanent from transitory shocks. Moreover, food inflation is often perceived by households as a signal of future inflation, which will be then embedded in their expectation formation. All these factors induce central banks to intervene. According to @mukherjee2021, in developing countries, price effects persist several years after the initial shock. The reasons can be multiple: first, poor integration into global markets implies weak import substitution effects (i.e., a failed local harvest is not easily substituted with food imports) and, secondly, food prices in developing countries depend on weather more than in advanced countries where the relative contribution of wages, physical capital, energy, and transport costs is substantially higher.
 
-Climate-induced demand shocks. Beyond driving cost-push inflation up, the climate can also shift household preferences and human needs (e.g. cooling or warming) and by extension demand patterns. For example, depressed economic activity (i.e., declining income, wealth, and confidence) might cause falling prices for non-tradable sectors [@kamber2013]. Particularly in developing countries where food constitutes the largest share of the consumer basket, higher food prices reduce the money available for other items, stifling broader consumer spending. In a cross-country analysis of 48 advanced and emerging economies, @faccia2021 find that upward temperature anomalies have a swift upward effect which turns insignificant or even negative in the medium term, possibly due to lower demand. Distinguishing by type and intensity of climate shocks, @Kabundi2022 find that, while droughts tend to push inflation up because of rising food prices, floods curb demand and so inflation. In the aftermath of a weather shock, consumption patterns may adapt in ways that prompt relative price fluctuations among sectors, such as from hospitality and travel to technology. Explain Figure 1.
+Climate-induced demand shocks. Beyond driving cost-push inflation up, the climate can also shift household preferences and human needs (e.g. cooling or warming) and by extension demand patterns. For example, depressed economic activity (i.e., declining income, wealth, and confidence) might cause falling prices for non-tradable sectors [@kamber2013]. Particularly in developing countries where food constitutes the largest share of the consumer basket, higher food prices reduce the money available for other items, stifling broader consumer spending. In a cross-country analysis of 48 advanced and emerging economies, @faccia2021 find that upward temperature anomalies have a swift upward effect which turns insignificant or even negative in the medium term, possibly due to lower demand. Distinguishing by type and intensity of climate shocks, @Kabundi2022 find that, while droughts tend to push inflation up because of rising food prices, floods curb demand and so inflation. In the aftermath of a weather shock, consumption patterns may adapt in ways that prompt relative price fluctuations among sectors, such as from hospitality and travel to technology. Explained in @fig-flowchart.
 
 In contrast to the spillover effects of supply-side shocks, demand shocks do not give rise to price transmission from customers to suppliers despite the presence of sectoral interlinkages:  for example, if as a result of a weather shock consumers’ demand for hospitality falls, this will likely affect the price of the focal sector (i.e., hospitality sector) without altering the price of its suppliers (i.e. food or construction industry).^[A few authors study demand shocks’ transmission across sectoral production and highlight specific conditions whereby upstream propagation may arise (Acemoglu et al. 2012, Arata and Miyakawa 2022).] 
 
@@ -156,7 +156,7 @@ Given the complex interplay of upward and downward forces on prices, the overall
 # Data 
 
 ## Prices
-We build a global dataset of monthly Consumer Price indexes and sectoral sub-indexes sourced from Haver Analytics. We use non-seasonally adjusted data due to better coverage and we remove seasonal effects. By matching the 12 CPI categories  which classify consumer expenditure to the standard taxonomy of industrial sectors (UN 2008), we derive sectoral retail prices – see Table 1.^[We exclude ‘Alcohol and Tobacco’ prices as well as ‘Other’ prices due to the impossibility of properly matching these products to a particular industrial sector.] Our sample covers 151 countries from January 1980 to December 2023; however, to make the panel more balanced, we restrict the analysis to the period 2000-2023 (details on data availability per country-sector are in Table A1 in the Appendix). 
+We build a global dataset of monthly Consumer Price indexes and sectoral sub-indexes sourced from Haver Analytics. We use non-seasonally adjusted data due to better coverage and we remove seasonal effects. By matching the 12 CPI categories  which classify consumer expenditure to the standard taxonomy of industrial sectors (UN 2008), we derive sectoral retail prices – see @tbl-cpi_matching.^[We exclude ‘Alcohol and Tobacco’ prices as well as ‘Other’ prices due to the impossibility of properly matching these products to a particular industrial sector.] Our sample covers 151 countries from January 1980 to December 2023; however, to make the panel more balanced, we restrict the analysis to the period 2000-2023 (details on data availability per country-sector are in Table A1 in the Appendix). 
 
 \newpage
 
