--- a/climate_sereno.tex
+++ b/climate_sereno.tex
@@ -189,7 +189,7 @@
 
 
 \author {Xolani Sibande\footnote{Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \and
-Serena Merrino \footnote{University College London, School of Slavonic and East European Studies, United Kingdom; Email: serena.merrino@resbank.co.za}}
+Serena Merrino \footnote{Economic Research Department, South African Reserve Bank and University College London, School of Slavonic and East European Studies, United Kingdom; Email: serena.merrino@resbank.co.za}}
 
 
 \date{\today}
@@ -200,8 +200,9 @@ ipsum
 
 \end{abstract}
 
-\noindent\textbf{Keywords}:
-\textbf{JEL Codes}:
+\noindent\textbf{Keywords}: Climate impacts, Input-output supply chain interlinkages, Pro-
+duction network, Spillovers, Weather shocks, Monetary Policy
+\textbf{JEL Codes}:E23, E32, E52, L14, O11, Q54, R15,
 \newpage
 
 \setstretch{1.5}
@@ -499,7 +500,7 @@ droughts tend to push inflation up because of rising food prices, floods
 curb demand and so inflation. In the aftermath of a weather shock,
 consumption patterns may adapt in ways that prompt relative price
 fluctuations among sectors, such as from hospitality and travel to
-technology. Explain Figure 1.
+technology. Explained in Figure~\ref{fig-flowchart}.
 
 In contrast to the spillover effects of supply-side shocks, demand
 shocks do not give rise to price transmission from customers to
@@ -561,13 +562,13 @@ sub-indexes sourced from Haver Analytics. We use non-seasonally adjusted
 data due to better coverage and we remove seasonal effects. By matching
 the 12 CPI categories which classify consumer expenditure to the
 standard taxonomy of industrial sectors (UN 2008), we derive sectoral
-retail prices -- see Table 1.\footnote{We exclude `Alcohol and Tobacco'
-  prices as well as `Other' prices due to the impossibility of properly
-  matching these products to a particular industrial sector.} Our sample
-covers 151 countries from January 1980 to December 2023; however, to
-make the panel more balanced, we restrict the analysis to the period
-2000-2023 (details on data availability per country-sector are in Table
-A1 in the Appendix).
+retail prices -- see Table~\ref{tbl-cpi_matching}.\footnote{We exclude
+  `Alcohol and Tobacco' prices as well as `Other' prices due to the
+  impossibility of properly matching these products to a particular
+  industrial sector.} Our sample covers 151 countries from January 1980
+to December 2023; however, to make the panel more balanced, we restrict
+the analysis to the period 2000-2023 (details on data availability per
+country-sector are in Table A1 in the Appendix).
 
 \newpage
 
