--- a/title.tex
+++ b/title.tex
@@ -2,7 +2,7 @@
 
 
 \author {Xolani Sibande\footnote{Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \and
-Serena Merrino \footnote{University College London, School of Slavonic and East European Studies, United Kingdom; Email: serena.merrino@resbank.co.za}}
+Serena Merrino \footnote{Economic Research Department, South African Reserve Bank and University College London, School of Slavonic and East European Studies, United Kingdom; Email: serena.merrino@resbank.co.za}}
 
 
 \date{\today}
@@ -13,6 +13,7 @@ ipsum
 
 \end{abstract}
 
-\noindent\textbf{Keywords}:
-\textbf{JEL Codes}:
+\noindent\textbf{Keywords}: Climate impacts, Input-output supply chain interlinkages, Pro-
+duction network, Spillovers, Weather shocks, Monetary Policy
+\textbf{JEL Codes}:E23, E32, E52, L14, O11, Q54, R15,
 \newpage
