updated extraction scripts

--- a/climate_sereno.tex
+++ b/climate_sereno.tex
@@ -544,7 +544,7 @@ prices than shrinking sectors.
 
 \centering{
 
-\includegraphics{flow_chart.png}
+\includegraphics[width=3.12in,height=\textheight]{flow_chart.png}
 
 }
 
