--- a/climate_sereno.tex
+++ b/climate_sereno.tex
@@ -582,7 +582,7 @@ country-sector are in Table A1 in the Appendix).
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{0.94in}|p{1.69in}|p{2.91in}}
+\begin{longtable}[c]{|p{0.94in}|p{1.69in}|p{2.91in}}
 
 \caption{\label{tbl-cpi_matching}Matching price categories to industrial
 sectors}
@@ -836,6 +836,84 @@ Index, or sectoral profits-to-GVA.
 
 \section{Results}\label{results}
 
+\subsection{Long run effects of weather shocks on sectoral
+inflation}\label{long-run-effects-of-weather-shocks-on-sectoral-inflation}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_temp-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_temp}Baseline model: domestic and foreign
+effects of temperature shocks on sectoral inflation}
+
+\end{figure}%
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_precip-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_precip}Baseline model: domestic and foreign
+effects of precipitation shocks on sectoral inflation}
+
+\end{figure}%
+
+\subsection{Accounting for weather
+seasons}\label{accounting-for-weather-seasons}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-seasonal_temp-1.pdf}
+
+}
+
+\caption{\label{fig-seasonal_temp}Seasons model: domestic and foreign
+effects of temperature shocks on sectoral inflation}
+
+\end{figure}%
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-seasonal_precip-1.pdf}
+
+}
+
+\caption{\label{fig-seasonal_precip}Seasons model: domestic and foreign
+effects of precipitation shocks on sectoral inflation}
+
+\end{figure}%
+
+\section{Does level of income
+matter?}\label{does-level-of-income-matter}
+
+\section{Importance of inflation
+targeting}\label{importance-of-inflation-targeting}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-inflation_targeting_temp-1.pdf}
+
+}
+
+\caption{\label{fig-inflation_targeting_temp}Inflation targeting model:
+domestic and foreign effects of temperature shocks on sectoral
+inflation}
+
+\end{figure}%
+
 \section{Conclusion}\label{conclusion}
 
 \newpage
@@ -857,7 +935,7 @@ Index, or sectoral profits-to-GVA.
 
 \newpage
 
-\section{Appendix}\label{appendix}
+\section{Appendix: Data}\label{appendix-data}
 
 \subsection{Inflation rates}\label{inflation-rates}
 
@@ -873,7 +951,7 @@ Index, or sectoral profits-to-GVA.
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{0.67in}|p{0.63in}|p{1.21in}|p{0.80in}|p{0.81in}|p{0.96in}}
+\begin{longtable}[c]{|p{0.67in}|p{0.63in}|p{1.21in}|p{0.80in}|p{0.81in}|p{0.96in}}
 
 \caption{\label{tbl-inflation_summary}Summary statistics of sectoral
 inflation rates (\%)}
@@ -986,7 +1064,7 @@ sample}\label{countries-and-month-sectors-in-sample}
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{3.18in}|p{3.28in}}
+\begin{longtable}[c]{|p{3.18in}|p{3.28in}}
 
 \caption{\label{tbl-countries_month_sectors}Countries and month-sectors
 in the sample}
@@ -1884,7 +1962,7 @@ in the sample}
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{2.58in}|p{0.43in}|p{0.96in}|p{0.53in}|p{0.56in}|p{0.71in}}
+\begin{longtable}[c]{|p{2.58in}|p{0.43in}|p{0.96in}|p{0.53in}|p{0.56in}|p{0.71in}}
 
 \caption{\label{tbl-climate_shocks}Summary statistics of climate shocks}
 
@@ -2110,7 +2188,7 @@ data}\label{matching-sectoral-price-and-io-data}
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{1.09in}|p{1.21in}|p{3.78in}}
+\begin{longtable}[c]{|p{1.09in}|p{1.21in}|p{3.78in}}
 
 \caption{\label{tbl-sectoral_matching}Matching sectoral price and
 Input-output data (Eora26)}
@@ -2222,7 +2300,7 @@ Input-output data (Eora26)}
 
 \providecommand{\ascline}[3]{\noalign{\global\arrayrulewidth #1}\arrayrulecolor[HTML]{#2}\cline{#3}}
 
-\begin{longtable}[l]{|p{3.24in}|p{1.33in}|p{1.30in}}
+\begin{longtable}[c]{|p{3.24in}|p{1.33in}|p{1.30in}}
 
 \caption{\label{tbl-stationarity_tests}Im-Pesaran-Shin unit-root test
 for main variables}
@@ -2329,6 +2407,75 @@ for main variables}
 \global\setlength{\tabcolsep}{\Oldtabcolsep}
 
 \renewcommand*{\arraystretch}{1}
+
+\setcounter{table}{0}
+\renewcommand{\thetable}{B\arabic{table}}
+
+\setcounter{figure}{0}
+\renewcommand{\thefigure}{B\arabic{figure}}
+
+\section{Appendix: Additional
+results}\label{appendix-additional-results}
+
+\subsection{Baseline results at 10th and 90th
+percentiles}\label{baseline-results-at-10th-and-90th-percentiles}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_temp_10_90-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_temp_10_90}Baseline model: domestic and
+foreign effects of temperature shocks on sectoral inflation}
+
+\end{figure}%
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_precip_10_90-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_precip_10_90}Baseline model: domestic and
+foreign effects of precipitation shocks on sectoral inflation}
+
+\end{figure}%
+
+\subsection{Baseline results with standardised
+shocks}\label{baseline-results-with-standardised-shocks}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_temp_std-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_temp_std}Baseline model: domestic and
+foreign effects of temperature standardised shocks on sectoral
+inflation}
+
+\end{figure}%
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{climate_sereno_files/figure-pdf/fig-baseline_precip_std-1.pdf}
+
+}
+
+\caption{\label{fig-baseline_precip_std}Baseline model: domestic and
+foreign effects of precipitation standardised shocks on sectoral
+inflation}
+
+\end{figure}%
 
 
 
